# HiSTBLinuxV100R005C00SPC050

./: .gitignore  Makefile  base.mak  cfg.mak  env.sh  hi_rules.mak  prebuilts.mak  readme.txt  rootbox.mak  version.mak
configs/hi3716mv410/: hi3716m41dma_hi3716mv410_apploader_cfg.mak  hi3716m41dma_hi3716mv410_cfg.mak
configs/hi3716mv420/: hi3716m42dmb_hi3716mv420_apploader_cfg.mak  hi3716m42dmb_hi3716mv420_cfg.mak  hi3716m42dmc_hi3716mv420_apploader_cfg.mak  hi3716m42dmc_hi3716mv420_cfg.mak
configs/hi3796mv100/: hi3796mdmo1a_hi3796mv100_apploader_cfg.mak  hi3796mdmo1a_hi3796mv100_cfg.mak  hi3796mdmo1a_hi3796mv100_tee_cfg.mak
configs/hi3796mv200/: hi3796mv2dmo_hi3796mv200_apploader_cfg.mak  hi3796mv2dmo_hi3796mv200_cfg.mak  hi3796mv2dmo_hi3796mv200_tee_cfg.mak
configs/hi3798cv200/: hi3798cv2dmb_hi3798cv200_security_cfg.mak  hi3798cv2dmb_hi3798cv200_tee_cfg.mak  hi3798cv2dmo_hi3798cv200_apploader_cfg.mak  hi3798cv2dmo_hi3798cv200_cfg.mak
configs/hi3798mv100/: hi3798mdmo1a_hi3798mv100_cfg.mak  hi3798mdmo1a_hi3798mv100_tee_cfg.mak  hi3798mdmo1b_hi3798mv100_cfg.mak  hi3798mdmo1c_hi3798mv100_cfg.mak  hi3798mdmo1d_hi3798mv100_cfg.mak  hi3798mdmo1f_hi3798mv100_cfg.mak  hi3798mdmo1g_hi3798mv100_cfg.mak  hi3798mdmo_hi3798mv100_apploader_cfg.mak
configs/hi3798mv200/: Readme.txt  hi3798mv2dma_hi3798mv200_tee_cfg.mak  hi3798mv2dmb_hi3798mv200_tee_cfg.mak  (+7 more)
sample/: Makefile  base.mak  hi_sample_rules.mak
sample/advca/: Makefile  (+17 more)
scripts/: MakeHelp  Makefile
source/component/directfb/patch/patch-for-1.7.7/patch-directfb/inputdrivers/bluetooth/: Makefile  Makefile.am
(+6902 files in other folders)
